--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.1.43
+@version        1.1.44
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1117,6 +1117,14 @@ body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
 	table h3 /* https://be.wikisource.org/wiki/Галоўная_старонка */
 	{
 		color: #000 !important;
+	}
+}
+
+@-moz-document domain("be.wikisource.org") {
+
+	/* Main page "Вітаем у Вікікрыніцах, вольнай бібліятэцы, якую можа рэдагаваць кожны" */
+	.commonWS {
+		color: #bbb;
 	}
 }
 
