--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.1.44
+@version        1.1.45
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1124,6 +1124,11 @@ body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
 
 	/* Main page "Вітаем у Вікікрыніцах, вольнай бібліятэцы, якую можа рэдагаваць кожны" */
 	.commonWS {
+		color: #bbb;
+	}
+
+	/* Fix top color at https://be.wikisource.org/wiki/Лявон_Бушмар_(1930) */
+	.mw-body {
 		color: #bbb;
 	}
 }
