--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.1.46
+@version        1.1.47
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1130,6 +1130,10 @@ body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
 	/* Fix top color at https://be.wikisource.org/wiki/Лявон_Бушмар_(1930) */
 	.mw-body {
 		color: #bbb;
+	}
+	.header-mainblock {
+		/* Override https://be.wikisource.org/wiki/Вікікрыніцы:Пра_Вікікрыніцы */
+		color: #000;
 	}
 
 	/* Red background: "Гэта старонка не была вычытаная"
