History page at https://be.wikisource.org/wiki/Адмысловае:Contributions/Vitaly_Zdanevich: fix top colors

--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.1.48
+@version        1.1.49
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1147,6 +1147,11 @@ body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
 	.plainSister {
 		border: 0 !important;
 		background: #000 !important;
+	}
+
+	/* Top text at https://be.wikisource.org/wiki/Адмысловае:Contributions/Vitaly_Zdanevich */
+	#mw-content-subtitle {
+		color: #bbb;
 	}
 
 	/* Red background: "Гэта старонка не была вычытаная"
