--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.1.52
+@version        1.1.53
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -230,6 +230,7 @@ tr,
 .mw-collapsible, [style='background-color:#CCCCFF;'], /* https://ru.wikipedia.org/wiki/%D0%94%D0%A2-75 */
 .mw-collapsible caption[style='background:#eaecf0; border:1px solid #a2a9b1'], /* https://ru.wikipedia.org/wiki/Речицкий_уезд */
 .oo-ui-selectFileInputWidget.oo-ui-widget-enabled.oo-ui-selectFileInputWidget-dropTarget, /* https://commons.wikimedia.org/wiki/Special:UploadWizard */
+.mw-parser-output .ts-Скрытый_блок-gray .ts-Скрытый_блок-title, /* Infobox: block names with [Expand] https://ru.wikipedia.org/wiki/Коммунизм */
 #upload-wizard .arrow,
 .mw-parser-output .wst-process-header .wst-header-notes, /* https://en.wikisource.org/wiki/Help:Beginner%27s_guide_to_adding_texts */
 #mwe-upwiz-deeds-thumbnails, /* Commons upload: 'Release rights' step */
