Commons main page: font colors make visible

--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.1.56
+@version        1.1.57
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -276,6 +276,11 @@ tr,
 }
 h2,
 #pagehistory li.selected,
+
+#mf-tagline-title div, /* Top block with "Wikimedia Commons" and description of the project https://commons.wikimedia.org/wiki/Main_Page */
+#mf-picture-title,
+.mainpage-box-title, /* "Monthly photo challenge" */
+
 .oo-ui-fieldLayout-header, /* Label for commit message input */
 .mwe-upwiz-label-title a, /* "Do you know what Creative Commons license this work was published under?" */
 .cdx-tabs:not(.cdx-tabs--framed) > .cdx-tabs__header .cdx-tabs__list__item:enabled, /* Commons search: top bar buttons */
@@ -740,7 +745,10 @@ table.standard tr:first-child, /* https://ru.wikipedia.org/wiki/Солнечно
 table.vgr-aggregators.wikitable tr th, /* https://en.wikipedia.org/wiki/S.W.I.N.E. */
 table.vgr-aggregators.wikitable caption, /* https://en.wikipedia.org/wiki/S.W.I.N.E. */
 table.vgr-reviews.wikitable caption, /* https://en.wikipedia.org/wiki/S.W.I.N.E. */
+
+.tpl-hidden-headertext, /* Commons main page */
 table.wikitable.filehistory th, /* https://commons.wikimedia.org/wiki/File:LT-1996-50lit%C5%B3-Gediminas-b.png */
+
 table.wikitable > tbody > tr > th, /* https://en.wikipedia.org/wiki/Russian_language#Vocabulary */
 table caption b, /* https://ru.wikipedia.org/wiki/Речицкий_уезд */
 table[style='text-align:center; border:1px solid black; background:#fafafa'] th, /* https://en.wikipedia.org/wiki/Batumi#Demographics */
