--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.1.62
+@version        1.1.63
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -547,6 +547,12 @@ span[style='background-color:#EDF0FF'], /* https://be.wiktionary.org/wiki/мар
 {
 	background: 0 !important;
 	border: 0 !important;
+}
+
+/* Wikipedia: Ctrl-F toolbar for Search-and-Replace */
+.oo-ui-toolbar-bar {
+	left: 0 !important;
+	right: 0 !important;
 }
 
 .ext-WikiEditor-ManualWidget {
