--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.1.67
+@version        1.1.68
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -76,6 +76,12 @@ a[title='Log out'],
 #editpage-copywarn3, /* Editing page: "Do not copy text from other websites without permission. It will be deleted. */
 .mwe-upwiz-metadata-notice, /* "EXIF metadata in this file may contain location or other personal data automatically added by your camera" */
 .mwe-upwiz-license-metadata, /* Commons uploading: step Describe: bottom of the page - block about captions license (always the same text) */
+
+/* Commons: uploading: Description textarea: big list of languages */
+.uls-menu h3,
+.uls-lcd-region-section:not([data-region='EU']),
+.uls-language-block a:not([lang='ru'], [lang='en'], [lang='be']),
+
 .sister-projects-wmf, /* Commons main page: logo of Wikimedia */
 .sister-projects-family, /* Commons main page: text "Wikimedia Commons is part of the non-profit, multilingual, free-content Wikimedia family */
 .oo-ui-fieldsetLayout-help, /* Wikipedia image editing popup: help ico */
