--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.1.76
+@version        1.1.77
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -329,7 +329,7 @@ cite, /* Wikipedia quote */
 #p-user-label, /* "User" button at the top: vertical line at the right */
 .sub, /* https://be.wikipedia.org/wiki/Галоўная_старонка -> Вікіпраекты */
 .oo-ui-fieldsetLayout-header, /* Preferences: subtitles of group of prefs */
-.oo-ui-fieldLayout-field, /* Preferences: labels */
+#mw-prefsection-rendering-skin .oo-ui-fieldLayout-field, /* Preferences: labels */
 .popupData, /* Gadget */
 .navpopup .reference-text .citation, /* Gadget */
 .popupPreview, /* Gadget */
@@ -861,7 +861,7 @@ th {
 	max-width: 100%;
 }
 
-p,
+p:not(.ve-ce-branchNode.ve-ce-contentBranchNode.ve-ce-paragraphNode.ve-ce-generated-wrapper), /* Not "Media settings" on Wikipedia */
 dl, /* Talk page - comment body */
 center /* https://be.wikipedia.org/wiki/Вікіпедыя:Спасылкі_на_крыніцы  */,
 .noprint,
