--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.1.78
+@version        1.1.79
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -796,6 +796,7 @@ span[style='background:yellow'] /* https://en.wikipedia.org/wiki/Wikipedia:Tools
 #fileinfotpl_date,
 #fileinfotpl_src,
 #fileinfotpl_aut,
+#fileinfotpl_ver, /* https://commons.wikimedia.org/wiki/File:1_Soviet_Ruble_Note_02.tif */
 
 #rationale_desc, /* https://en.wikipedia.org/wiki/File:Gc_squad_config.PNG */
 #rationale_src,
