--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.1.79
+@version        1.1.80
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -862,7 +862,7 @@ th {
 	max-width: 100%;
 }
 
-p:not(.ve-ce-branchNode.ve-ce-contentBranchNode.ve-ce-paragraphNode.ve-ce-generated-wrapper), /* Not "Media settings" on Wikipedia */
+p:not(.ve-ce-branchNode.ve-ce-contentBranchNode.ve-ce-paragraphNode.ve-ce-generated-wrapper, .ve-ce-branchNode.ve-ce-contentBranchNode.ve-ce-paragraphNode), /* Not "Media settings" on Wikipedia, not comment text */
 dl, /* Talk page - comment body */
 center /* https://be.wikipedia.org/wiki/Вікіпедыя:Спасылкі_на_крыніцы  */,
 .noprint,
