--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.1.84
+@version        1.1.85
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -575,6 +575,7 @@ span[style='background-color:#EDF0FF'], /* https://be.wiktionary.org/wiki/мар
 .mw-parser-output .main-box, /* https://ru.wikipedia.org/wiki/Заглавная_страница */
 .toccolours, /* Top years at https://en.wikipedia.org/wiki/Category:2004_video_games */
 .Reception, /* https://ru.wikipedia.org/wiki/Warhammer_40,000:_Dawn_of_War#Рецензии */
+.ve-ui-mwSaveDialog-options, /* "Save your changes" popup: block with checkboxes "This is a minor edit", "Watch this page" */
 .hlist
 {
 	background: 0 !important;
